Modified with custom events and passing eventdata, aliasing input and output properties

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<app-titlecase></app-titlecase>
+<app-favourites [is-favourite]="post.isFavourite" (change)="isFavouritesChanged($event)"></app-favourites>
