--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-favourites [is-favourite]="post.isFavourite" (change)="isFavouritesChanged($event)"></app-favourites>
+<ul>
+  <li *ngFor="let course of courses; odd as i">{{i}} - {{course.id+" - "+course.name}}</li>
+</ul>
